@@ -8,7 +8,7 @@
   <tr align="center" bgcolor="#e4e4e4">
     <td>
       <h1><big><font color="#3c34ec"><i>NuttX RTOS</i></font></big></h1>
-      <p>Last Updated: November 2, 2008</p>
+      <p>Last Updated: November 5, 2008</p>
     </td>
   </tr>
 </table>
@@ -1113,7 +1113,8 @@ buildroot-0.1.0 2007-03-09 &lt;spudmonkey@racsa.co.cr&gt
 <pre><ul>
 nuttx-0.3.18 2008-xx-xx Gregory Nutt &lt;spudmonkey@racsa.co.cr&gt;
 	* Added port for the STMicro STR71x processor and configuration for the Olimex STR-P711
-	  board (untested as of the initial checkin).
+	  board (STR71x testing is stalled because I have been unable to get OpenOCD to
+	  communicate with my JTAG wiggler on Linux).
 	* Fix race condition workaround delay in LPC214X SPI logic.  It the cause of the very
 	  bad MMC/SD performance.
 
